# kaffe-rs

./: .gitignore  Cargo.toml  README.md  TODO  dev.sh  server.py
client/: build.cjs  build.js  import_map.json  package-lock.json  package.json  process-shim.js  template.html  tsconfig.json
client/polyfills/: URL.js
client/src/: App.tsx  Routing.tsx  client-entry.template  client-entry.tsx  index.tsx  server-entry.template  server-entry.template.tsx  server-entry.tsx  ssr.tsx
client/src/components/: Home.tsx  NotFound.tsx  Routing.tsx
client/src/components/styles/: base.css  second.css
examples/: contact.mdx  example_with_react.mdx  index.mdx  markdown.mdx
examples/blog/: post1.mdx  post2.mdx
src/: lib.rs  main.rs  parser.rs  runtime.js  v8.rs
